# sample-app-jsaddle

./: .ghci  .ghcid  .gitignore  Main.hs  README.md  app.cabal  default.nix  stack.yaml
client/: Button.hs  Main.hs
nix/: sources.json
src/: Api.hs  Button.hs  Imports.hs  Login.hs  Main.hs
static/: index.html  js
