cabal-version:       2.2
name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple

executable app
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:
    Api
    Button
  build-depends:
    miso, base, async, exceptions, transformers, text,
    aeson, aeson-pretty, containers, http-types, lens, lens-aeson, generic-lens,
    http-types, servant, servant-client-core, servant-auth, servant-jsaddle,
    -- named, servant-namedargs, servant-client-namedargs
  if impl(ghcjs)
    build-depends: ghcjs-base
    ghcjs-options: -dedupe
    cpp-options:   -DGHCJS_BROWSER
  if !impl(ghcjs)
    build-depends:
     jsaddle, jsaddle-warp, http-client, servant-client, warp, websockets
  default-language: Haskell2010
