cabal-version:       2.2
name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple

executable app
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:
    Api
    Button
  build-depends:
      base
    , aeson
    , aeson-pretty
    , async
    , containers
    , exceptions
    , generic-lens
    , http-types
    , lens
    , lens-aeson
    , miso
    , pretty-simple
    , servant
    , servant-client-core
    , servant-jsaddle
    , text
    , transformers
  if impl(ghcjs)
    build-depends: ghcjs-base, ghcjs-dom
    ghcjs-options: -dedupe
    cpp-options:   -DGHCJS_BROWSER
  if !impl(ghcjs)
    build-depends:
       jsaddle
     , jsaddle-dom
     , jsaddle-warp
     , http-client
     , servant-client
     , warp
     , websockets
  default-language: Haskell2010
