cabal-version:       2.2
name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple

executable app
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:
    Api
    Button
    Login
    Imports
  build-depends:
      base
    , aeson
    , aeson-pretty
    , async
    , containers
    , exceptions
    , generic-lens
    , ghcjs-dom
    , http-types
    , lens
    , lens-aeson
    , miso
    , mtl
    , pretty-simple
    , servant
    , servant-client-core
    , servant-jsaddle
    , text
    , validation-selective
  if impl(ghcjs)
    build-depends: ghcjs-base
    ghcjs-options: -dedupe -fno-warn-missing-home-modules
    cpp-options:   -DGHCJS_BROWSER
  if !impl(ghcjs)
    build-depends:
       jsaddle
     , jsaddle-warp
     , http-client
     , rapid
     , servant-client
     , warp
     , websockets
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -Wno-name-shadowing
    -Wno-unused-imports
    -Wno-unused-top-binds
    -fhide-source-paths
  default-language: Haskell2010
